--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss values = list(map(lambda m_value: residual_sum_))"
+    "    rss values = list(map(lambda m_value: residual_sum_squares(x)))"
    ]
   },
   {
