--- a/index.ipynb
+++ b/index.ipynb
@@ -300,9 +300,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "cells": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#EDFAFF"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           [
+            0.8,
+            0.9,
+            1,
+            1.1,
+            1.2,
+            1.3,
+            1.4,
+            1.5,
+            1.6,
+            1.7,
+            1.8
+           ],
+           [
+            64693.76669999998,
+            45559.96669999998,
+            30626.166699999987,
+            19892.36669999999,
+            13358.5667,
+            11024.766700000004,
+            12890.96670000001,
+            18957.166700000016,
+            29223.36670000002,
+            43689.566700000025,
+            62355.76670000004
+           ]
+          ]
+         },
+         "header": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#a1c3d1"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           "M values",
+           "RSS values"
+          ]
+         },
+         "type": "table",
+         "uid": "b023467c-d243-11e8-a8db-0242ac110006"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"6045d337-b299-4fea-a303-1e2e2d3b8b3b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6045d337-b299-4fea-a303-1e2e2d3b8b3b\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8], [64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"b04bba08-d243-11e8-a8db-0242ac110006\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"6045d337-b299-4fea-a303-1e2e2d3b8b3b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6045d337-b299-4fea-a303-1e2e2d3b8b3b\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8], [64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"b04bba08-d243-11e8-a8db-0242ac110006\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cost_chart = rss_values(budgets, revenues, scaled_m_values, b_value)\n",
     "if cost_chart: \n",
