--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    rss_values = list(map(lambda m_value: residual_sum_squares(x_values,values))"
+    "    rss_values = list(map(lambda m_value: residual_sum_squares(x_values,value))"
    ]
   },
   {
