--- a/index.ipynb
+++ b/index.ipynb
@@ -577,7 +577,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    rss_values = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_values))\n",
-    "    return {'m_values': m_values, 'rss_values'}"
+    "    return {'m_values': m_values, 'rss_values': rss_values}"
    ]
   },
   {
