--- a/index.ipynb
+++ b/index.ipynb
@@ -635,7 +635,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    def gradient_descent(x_values, y_v)"
+    "    def gradient_descent(x_values, y_values, steps, b, learnn)"
    ]
   },
   {
