--- a/index.ipynb
+++ b/index.ipynb
@@ -635,7 +635,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m)"
+    "    def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m)\n",
+    "    for i in range(steps)"
    ]
   },
   {
