--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m)\n",
-    "    for i in range(steps)"
+    "    for i in range(steps):\n",
+    "        "
    ]
   },
   {
