--- a/index.ipynb
+++ b/index.ipynb
@@ -637,7 +637,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m)\n",
     "    for i in range(steps):\n",
-    "        "
+    "        current_cost"
    ]
   },
   {
