--- a/index.ipynb
+++ b/index.ipynb
@@ -635,6 +635,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
+    "    cost_c\n",
     "    def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m)\n",
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
